# wimpy_node

./: CMakeLists.txt  README.md  package.xml
include/wimpy_node/: control_table.hpp  dynamixel_sdk_wrapper.hpp  wimpy.hpp
include/wimpy_node/devices/: devices.hpp  motor_power.hpp  reset.hpp  sound.hpp
include/wimpy_node/sensors/: battery_state.hpp  imu.hpp  sensor_state.hpp  sensors.hpp
launch/: robot.launch.py
opencr/turtlebot3_ros2/examples/turtlebot3_burger/: turtlebot3_burger.ino
opencr/turtlebot3_ros2/include/turtlebot3/: turtlebot3.h  turtlebot3_motor_driver.h
opencr/turtlebot3_ros2/src/turtlebot3/: turtlebot3.cpp  turtlebot3_motor_driver.cpp
param/: burger.yaml
src/: dynamixel_sdk_wrapper.cpp  node_main.cpp  wimpy.cpp
src/devices/: motor_power.cpp  reset.cpp  sound.cpp
src/sensors/: battery_state.cpp  imu.cpp  sensor_state.cpp
